refactoring code by kz